workspace/log/build_2023-12-10_21-49-28/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_position_command(float, float, float, float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:307:64: error: ‘YAW_RATE’ is not a member of ‘mavros_msgs::msg::PositionTarget’ {aka ‘mavros_msgs::msg::PositionTarget_<std::allocator<void> >’}
  307 |         setpoint.type_mask = mavros_msgs::msg::PositionTarget::YAW_RATE | mavros_msgs::msg::PositionTarget::FORCE;
      |                                                                ^~~~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
